--- a/custom_components/satel_integra/manifest.json
+++ b/custom_components/satel_integra/manifest.json
@@ -6,6 +6,6 @@
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/wasilukm/alt_ha_satel_integra/issues",
   "loggers": ["satel_integra"],
-  "requirements": [],
+  "requirements": ["pycryptodomex==3.21.0"],
   "version": "0"
 }
